# CI_CD

./: CMakeLists.txt  calculator.cpp
.github/workflows/: ci-cd-calculator.yml
src/: calculator.cpp  calculator.h
test/: test_calculator.cpp
